--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 
 
     <script>
-        const apiUrl = 'https://server.jessejesse.workers.dev';
-        const apiKey = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'; //wrangler secret put
+        const apiUrl = 'https://YOUR-DOMAIN.workers.dev'; <-- UPDATE THIS LINE 
+        const apiKey = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'; <-- CLOURDFLARE R2 STORAGE API KEY
 
         function displayResponse(message, isError = false) {
             const responseElement = document.getElementById('response');
